--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lego MindStorm Homepage</title>
 
-    <link rel="stylesheet" href="./CSS/CS1102_homepage.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="./CS1102_homepage.css" type="text/css" media="all"/>
 
     <script>
         function init(){
