--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lego MindStorm Homepage</title>
 
-    <link rel="stylesheet" href="./CS1102_homepage.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="./CSS/CS1102_homepage.css" type="text/css" media="all"/>
 
     <script>
         function init(){
@@ -14,8 +14,8 @@
         }
 
         function video_text(){
-            var videoText = new Array("Lego MindStorm Tricky Robot - Slam Dunk", "CS1102 Project Group 2 for Lab_5_Mon_1300",
-            "Engineered by Ting Siu Shing, Yang Guangyulu, Hong Binghui");
+            var videoText = new Array("TravelGPT", "Developed by Galaxy.io",
+            "Engineered by Duke, Gazza, Natalie Shore and Yaxuan");
             return videoText[Math.floor(Math.random()*3)]; 
         }
     
@@ -32,15 +32,14 @@
 
     <header>
         <div id="header">
-        <div id="div1">
-            <img src="./images/logo.png" alt="Lego Mindstorm Logo">
-        </div>
+          <h1 id="title">TravelGPT</h1>
+          <img src="./images/logo_resized.jpg" alt="travelgpt logo">
         </div>
 
     </header>
 
   <div id="welcome">
-    <p id="welcomeText">CS1102 Project (2022-2023 Semester A) - Group 2 for Lab5_Mon_1300 - Our Experience with Lego Mindstorm (Ting Siu Shing, Yang Guangyulu, Hong Binghui)</p>
+    <p id="welcomeText">Welcome to your personalized AI travel assistant</p>
   </div>
   <br><br><br>
   <!-- infomation-->
@@ -48,40 +47,34 @@
 
     <div id="info">    
         <dl>
-            <dt>Background</dt><br>
-                <dd>We use the MINDSTORMS app, which is a software that offers a platform to write and create robot instructions to order it. 
-                The Lego robot that we employ goes by the name "Tricky." We built our robot with motors and sensors and order it to pick up the ball and 
-                score the slam dunk by using python programming.</dd><br>
-            <dt>Application</dt><br>
-                <dd>In addition to controlling robots by Python programming, Python can also be used for other applications such as web application development, game development, 
-                artificial intelligence, data analysis, and many more.</dd><br>
-            <dt>Main Functions</dt><br>
-                <dd>Some crucial parts and functions are included in the MINDSTORMS app:<br>
-                Motors: With motors, the robot can be powered to move at a fixed speed.<br><br>
-                Distance sensor: This sensor can gauge how far away the closest obstruction is from it.<br><br>
-                Color sensor: This sensor has the function of detecting the color of objects that are in front of the camera.<br><br>
-                Hub: The hub is in charge of communicating program instructions to each motor and sensor. <br><br></dd>
-            <dt>Building Lego Robot "Tricky"</dt><br>
-                <dd><img src="./images/Making_Lego1.jpg" alt="Making Lego Tricky" id="makingTricky"></dd>   
+            <dt>What is TravelGPT</dt><br>
+                <dd>TravelGPT is an AI chatbot that generates human like responses for any questions you ask related to 
+                  leisure and travelling. Leveraging our 50-billion parameter large language model we have gathered from proprietary sources,
+                  we aim to achieve the following purpose:
+                  <ol>
+                    <li>To create customized travel recommendation for all customers.</li>
+                    <br>
+                    <li>To become their personal tour guide when they are at the place they are visiting.</li>
+                  </ol>
+                </dd><br>
+            <dt>How to use it</dt><br>
+                <dd>It’s a kind of real-time travel planning conversation model. Generally speaking, this is an artificial intelligence conversation model for travel. 
+                  It can intelligently understand the customer's travel needs in the form of chatting, and combine IoT and big data to accurately customize travel plans.
+                  For your own experience, you may try it here (link to interface). <br><br>
+
+                  You may also take a loot at the usage scenario below:<br><br>
+                  E.g. assumes that the client has a relatively clear long-term travel plan, which is what most people do nowadays before they travel. 
+                  The time for travel is determined months in advance, and then detailed plans are determined by searching information.
+                </dd><br>                
+            <dt>Our Motto</dt><br>
+                <dd><img src="./images/Intro_Post.jpg" alt="our motto" id="our_motto"></dd><br>  
         </dl>
-        <h2>Experience</h2>
+        <h2>Link to our promotion channels</h2>
             <ol>
-                <li>Firstly, we assembled the robot and the basket to form the Tricky model according to MINDSTORMS’s LEGO tutorial.</li><br>
-                <li>Secondly, we learnt the file Tutorial for Python and explore the Python functionalities of MINDSTORMS.</li><br>
-                <li>Thirdly, we wrote our own code in Python. We reset the robot’s arm to a horizontal position. When the distance sensor senses the object is 
-                    closer than 6 cm, the motor will stop, lifting its arm to pick up the ball. After that, Tricky moves backwards for 30 cm, then lifting arm to score the slam dunk.</li><br>
-                <li>Finally, we placed the robot, the basket and the basketball in their respective places and ran the code to record the robot's reaction <br>VIDEO DEMO--&gt</li>
+                <li>Facebook (link) </li><br>
+                <li>Instagram (link) </li><br>
+                <li>Twitter (link) </li><br>
             </ol>
-            
-        <h2>Dicovery</h2>
-            <p class="discovery">We discover there are many similarities between Scratch and Python. We can set the robot to do certain actions when certain conditions are met. 
-                In Scratch, we can drag Control-wait until D is closer than 6 cm and Movement-stop moving in the Scripts area. 
-                In Python, we write code: distance_sensor.wait_for_distance_closer_than(6,‘cm’) and movement_ motors . stop(). They achieved the same effect. 
-            </p>
-            <p class="discovery">In addition, we found that the LEGO Hub itself is a program system which can accept input and produce output.</p>
-            <div id="alignHub">
-            <img src="./images/hub_breakdown.jpg" alt="Lego Mindstorm Hub componenent" id="hub">
-            </div>
     </div>
 
   <!-- video -->
@@ -89,7 +82,7 @@
       <h2 id="messagee">Lego MindStorm Tricky Robot - Slam Dunk</h2>
       <div id="dvideo">
         <video controls autoplay muted id="Video1" loop>
-          <source src="./Lego_Mindstorm_Video.mp4" type="video/mp4">
+          <source src="./Sample_vid.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -97,8 +90,8 @@
     <br>
   <!-- form -->
     <div id="code">
-        <p id="title">Python Code for Project</p>
-        <img src="./images/Python_Code_for_Tricky.jpg" alt="Python Code for Lego Robot Tricky" id="pythonCode">
+        <p id="title">Under development</p><br><br>
+        <img src="./images/TravelGPT_logo.jpg" alt="logoGrey">
 
     </div>
   </div>
