--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lego MindStorm Homepage</title>
+    <title>TravelGPT Homepage</title>
 
     <link rel="stylesheet" href="./CS1102_homepage.css" type="text/css" media="all"/>
 
