--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </dl>
         <h2>Link to our promotion channels</h2>
             <ol>
-                <li>Facebook (link) </li><br>
+                <li>Facebook <a href="https://www.facebook.com/profile.php?id=100089851782710" target="blank">Link</a> </li><br>
                 <li>Instagram (link) </li><br>
                 <li>Twitter (link) </li><br>
             </ol>
