--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <ol>
                 <li>Facebook <a href="https://www.facebook.com/profile.php?id=100089851782710" target="blank">Link</a> </li><br>
                 <li>Instagram <a href="https://www.instagram.com/galaxybusiness_test/" target="blank">Link</a> </li><br>
-                <li>Twitter (link) </li><br>
+                <li>Twitter  <a href="https://twitter.com/Is2502_Galaxy" target="blank">Link</a> </li><br>
             </ol>
     </div>
 
