--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h2>Link to our promotion channels</h2>
             <ol>
                 <li>Facebook <a href="https://www.facebook.com/profile.php?id=100089851782710" target="blank">Link</a> </li><br>
-                <li>Instagram <a href="https://www.instagram.com/galaxybusiness_test/" target="blank">Link</a> </li><br>
+                <li>Instagram <a href="https://www.instagram.com/galaxybusiness_test" target="blank">Link</a> </li><br>
                 <li>Twitter  <a href="https://twitter.com/Is2502_Galaxy" target="blank">Link</a> </li><br>
             </ol>
     </div>
