--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <!-- footer block -->
   <footer id="ft"> 
-    <p>&lt-- Designed by Ting Siu Shing, Yang Guangyulu and Hong Binghui. <span>Link to techniques demonstrated in 
+    <p>&lt-- Designed by Wang Jiaxuan, Jiang Yaxuan, Hong Binghui, Du Zhuofan, Cai Yuzhi. <span>Link to techniques demonstrated in 
         webpage and references</span> <a href="./CS1102_Design_Page.html" target="blank">Design Page</a> --></p>
     
   </footer>
