--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
         <div id="header">
           <h1 id="title">TravelGPT</h1>
-          <img src="./images/logo_resized.jpg" alt="travelgpt logo">
+          <img src="./images/logo_white.jpg" alt="travelgpt logo" id="logo">
         </div>
 
     </header>
