--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <header>
         <div id="header">
-          <h1 id="title">TravelGPT</h1>
+          <h1 id="title">The Future of Travel</h1>
           <img src="./images/logo_white.jpg" alt="travelgpt logo" id="logo">
         </div>
 
