--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 
   <!-- footer block -->
   <footer id="ft"> 
-    <p>&lt-- Designed by Wang Jiaxuan, Jiang Yaxuan, Hong Binghui, Du Zhuofan, Cai Yuzhi. <span>Link to techniques demonstrated in 
-        webpage and references</span> <a href="./CS1102_Design_Page.html" target="blank">Design Page</a> --></p>
+    <p>&lt-- Designed by Wang Jiaxuan, Jiang Yaxuan, Hong Binghui, Du Zhuofan, Cai Yuzhi.</p>
     
   </footer>
     
