--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <!-- footer block -->
   <footer id="ft"> 
-    <p>&lt-- Designed by Wang Jiaxuan, Jiang Yaxuan, Hong Binghui, Du Zhuofan, Cai Yuzhi.</p>
+    <p>&lt-- Designed by Wang Jiaxuan, Jiang Yaxuan, Hong Binghui, Du Zhuofan, Cai Yuzhi --&gt</p>
     
   </footer>
     
