--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <dd>It’s a kind of real-time travel planning conversation model. Generally speaking, this is an artificial intelligence conversation model for travel. 
                   It can intelligently understand the customer's travel needs in the form of chatting, and combine IoT and big data to accurately customize travel plans.
                   For your own experience, you may try it here: <br><br>
-                  <h3><a id="interface" href="./IS2502_Interface.html" target="blank">Try TravelGPT</a></h3><br>
+                  <h3><a id="interface" href="./IS2502_Interface.html">Try TravelGPT</a></h3><br>
 
                   You may also take a loot at the usage scenario below:<br><br>
                   E.g. assumes that the client has a relatively clear long-term travel plan, which is what most people do nowadays before they travel. 
