--- a/IS2502_Interface.html
+++ b/IS2502_Interface.html
@@ -158,7 +158,7 @@
     <!-- footer block -->
   <footer id="ft"> 
     <div id="ft_background">
-      <button onclick="window.open('https://galaxy-travelgpt.netlify.app/','_blank')">Back to Homepage</button>
+      <button onclick="window.open('https://galaxy-travelgpt.netlify.app/')">Back to Homepage</button>
     </div>
   </footer>
 
