--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h2 id="messagee">Lego MindStorm Tricky Robot - Slam Dunk</h2>
       <div id="dvideo">
         <video controls autoplay muted id="Video1" loop>
-          <source src="./Sample_vid.mp4" type="video/mp4">
+          <source src="./Intro_Vid.mp4" type="video/mp4">
         </video>
       </div>
     </div>
