--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <!-- video -->
     <div id="promotion_information">
-      <h2 id="messagee">Lego MindStorm Tricky Robot - Slam Dunk</h2>
+      <h2 id="messagee">TravelGPT</h2>
       <div id="dvideo">
         <video controls autoplay muted id="Video1" loop>
           <source src="./Intro_Vid.mp4" type="video/mp4">
