--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <title>TravelGPT Homepage</title>
 
-    <link rel="stylesheet" href="./CS1102_homepage.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="./IS2502_homepage.css" type="text/css" media="all"/>
 
     <script>
         function init(){
