--- a/IS2502_Interface.html
+++ b/IS2502_Interface.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="CS2204" />
-  <meta name="description" content="This is an additional free format Web page for you to acknowledge the sources of information used in your design. If you use images, icon or text obtained from the Internet, write the source and links in this page. " />
-  <meta name="keywords" content="design,name,acknowledgement"/>
+  <meta name="author" content="IS2502" />
+  
+  <meta name="author" content="galaxy.io"/>
+
+  <meta name="description" content="This is the interface page for TravelGPT, 
+    an AI travel assitant aiming to customize your travel experience"/>
+    
+  <meta name="keywords" content="travel, AI, GPT, customization, intelligent, chatbot, tour guide, interface"/>
+  
   <title>Interface TravelGPT</title>
 
   <link rel="stylesheet" href="./Interface_design.css" media="all">
